# bevy_game_of_life

./: Cargo.toml  Makefile  README.md  index.html
src/: board.rs  cell.rs  cell_renderer.rs  main.rs
